# semantic_actions_description

./: CMakeLists.txt  Readme.md  package.xml
descriptions/: basic_actions.yaml  basic_tasks.yaml
include/gui/: SwitchStyle.h  gui.h  switch.h
include/reader/: ActionReader.h
launch/: parameters.launch
src/: analyse.cpp
src/gui/: DarkStyle.cpp  gui.cpp  main.cpp  switch.cpp
src/reader/: ActionReader.cpp  test.cpp
ui/: gui.ui
