<?xml version="1.0"?>
<package format="2">
  <name>semantic_actions_description</name>
  <version>0.0.0</version>
  <description>The semantic_actions_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
